--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/authservice
-spring.datasource.username=postgres
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.show-sql=true
